--- a/src/app/core/side-nav/side-nav.component.html
+++ b/src/app/core/side-nav/side-nav.component.html
@@ -87,7 +87,7 @@
 
     <li class="nav-item " [ngClass]="{ 'active': purchageOrder.isActive }">
       <a routerLink="/purchage-order" routerLinkActive="active" #purchageOrder="routerLinkActive" class="nav-link">
-        <i class="icon ion-ios-stats"></i>Purchage Order
+        <i class="icon ion-ios-stats"></i>Purchase Order
       </a>
   </li>
 
