--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -14,7 +14,7 @@
 
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12">
-                        <mat-paginator *appPermissions="[['USER_LIST']]" #paginator [length]="page_length" [pageSize]="items_per_page" [pageSizeOptions]="PAGE_SIZE_OPTIONS_DATA" (page)="pageChanged($event)"></mat-paginator>
+                        <mat-paginator *appPermissions="[['USER_LIST']]" #paginator [length]="page_length" [pageSize]="items_per_page"  [pageIndex]="pageIndex" [pageSizeOptions]="PAGE_SIZE_OPTIONS_DATA" (page)="pageChanged($event)"></mat-paginator>
                     </div>
                     <div class="col-lg-2 col-md-12 col-sm-12">
                         <div class="button-group">
