--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -13,7 +13,7 @@
             
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12">
-                        <mat-paginator #paginator *appPermissions="[['PRODUCT_LIST']]"  [length]="page_length" [pageSize]="items_per_page" [pageSizeOptions]="PAGE_SIZE_OPTIONS_DATA" (page)="pageChanged($event)"></mat-paginator>
+                        <mat-paginator #paginator *appPermissions="[['PRODUCT_LIST']]"  [length]="page_length" [pageSize]="items_per_page"  [pageIndex]="pageIndex" [pageSizeOptions]="PAGE_SIZE_OPTIONS_DATA" (page)="pageChanged($event)"></mat-paginator>
                     </div>
                 </div>
                 <div class="pd-15 bg-gray-200 forSearchFilter">
