--- a/src/app/components/orders/order-place/order-place.component.html
+++ b/src/app/components/orders/order-place/order-place.component.html
@@ -1,11 +1,11 @@
 <div class="az-content">
     <div class="col-lg-12">
-        <div class="button-group">
+        <!-- <div class="button-group">
             <button [routerLink]="['../../orders']" mat-raised-button=""
                 class="mat-focus-indicator btn-int-blue mat-raised-button mat-button-base">
                 Go to Orders
             </button>
-        </div>
+        </div> -->
     </div>
     <div class="container">
         <div *ngIf="isOrderShow" class="az-content-body d-flex flex-column order-details">
