--- a/src/app/components/orders/order-products/order-products.component.html
+++ b/src/app/components/orders/order-products/order-products.component.html
@@ -32,7 +32,7 @@
                                             (ngSubmit)="productFormSubmit()">
                                             <h3>Advance Filter</h3>
                                             <hr>
-                                            <mat-form-field appearance="outline">
+                                            <!-- <mat-form-field appearance="outline">
                                                 <mat-label>Item Type</mat-label>
                                                 <mat-select formControlName="item_type">
                                                     <mat-option value="">All</mat-option>
@@ -40,6 +40,20 @@
                                                         value="{{ item_type?.name}} - ( {{ item_type?.key }} )">
                                                         <span>{{ item_type?.name }} - ( {{ item_type?.key }} )</span>
                                                     </mat-option>
+                                                </mat-select>
+                                                <mat-error *ngIf="formValidate?.item_type?.errors?.required">This field
+                                                    is required.</mat-error>
+                                                <mat-error *ngIf="formValidate?.item_type?.errors?.serverError"> {{
+                                                    formValidate?.item_type?.errors?.serverError }} </mat-error>  
+                                            </mat-form-field> -->
+
+                                            <mat-form-field appearance="outline">
+                                                <mat-label>Item Type</mat-label>
+                                                <mat-select formControlName="item_type">
+                                                    <mat-option value="">All</mat-option>
+                                                    <mat-option *ngFor="let item_type of item_types;" [value]="item_type?.name">
+                                                        <span>{{ item_type?.name }}</span>
+                                                    </mat-option>                                                    
                                                 </mat-select>
                                                 <mat-error *ngIf="formValidate?.item_type?.errors?.required">This field
                                                     is required.</mat-error>
