--- a/src/app/components/products/product-create/product-create.component.html
+++ b/src/app/components/products/product-create/product-create.component.html
@@ -17,7 +17,7 @@
                     }} </mat-error>
             </mat-form-field>
 
-            <mat-form-field>
+            <!-- <mat-form-field>
                 <mat-label>Item Type</mat-label>
                 <mat-select formControlName="item_type" >
                     <mat-option *ngFor="let item_type of item_types;"
@@ -28,9 +28,32 @@
                 <mat-error *ngIf="formValidate?.item_type?.errors?.required">This field is required.</mat-error>
                 <mat-error *ngIf="formValidate?.item_type?.errors?.serverError"> {{
                     formValidate?.item_type?.errors?.serverError }} </mat-error>
+            </mat-form-field> -->
+
+            <mat-form-field>
+                <mat-label>Item Type</mat-label>
+                <mat-select formControlName="item_type">
+                    <mat-option *ngFor="let item_type of item_types;" [value]="item_type.id">
+                        <span>{{ item_type.name }}</span>
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="formValidate?.item_type?.errors?.required">This field is required.</mat-error>
+                <mat-error *ngIf="formValidate?.item_type?.errors?.serverError">{{ formValidate?.item_type?.errors?.serverError }}</mat-error>
+            </mat-form-field>
+            
+
+            <mat-form-field>
+                <mat-label>Brand</mat-label>
+                <mat-select formControlName="brand">
+                    <mat-option *ngFor="let item of filteredBrands;" [value]="item.id">
+                        <span>{{ item.name }}</span>
+                    </mat-option>
+                </mat-select>
+                <mat-error *ngIf="formValidate?.brand?.errors?.required">This field is required.</mat-error>
+                <mat-error *ngIf="formValidate?.brand?.errors?.serverError">{{ formValidate?.brand?.errors?.serverError }}</mat-error>
             </mat-form-field>
 
-             <mat-form-field class="example-full-width">
+             <!-- <mat-form-field class="example-full-width">
               <mat-label> Brand</mat-label>
               <input type="hidden" formControlName="brand">
               <input  matInput placeholder="Create Brand Or Choose Your Brand" aria-label="Brand" [matAutocomplete]="auto" [formControl]="itemCtrl" (keyup.enter)="addOption()">
@@ -45,7 +68,7 @@
               <mat-error *ngIf="formValidate?.brand?.errors?.required">This field is required.</mat-error>
               <mat-error *ngIf="formValidate?.brand?.errors?.serverError"> {{ formValidate?.brand?.errors?.serverError
                   }} </mat-error>
-            </mat-form-field>
+            </mat-form-field> -->
 
            
             <mat-form-field>
@@ -77,11 +100,12 @@
             <mat-form-field>
                 <mat-label>Discount</mat-label>
                 <input type="number" formControlName="discount" min="0" max="100" matInput>
-                <mat-error *ngIf="formValidate?.discount?.errors?.required">  Discount should be between 0 and 100.</mat-error>
+                
+                <mat-error *ngIf="formValidate?.discount?.errors?.required">  Discount should be between 0% and 100%.</mat-error>
                 <mat-error *ngIf="formValidate?.discount?.errors?.serverError"> {{ formValidate?.discount?.errors?.serverError
                     }} </mat-error>
                 <mat-error *ngIf="formValidate.discount.errors?.min || formValidate.discount.errors?.max">
-                    Discount should be between 0 and 100.
+                    Discount should be between 0% and 100%.
                 </mat-error>
             </mat-form-field>
 
